methods.returning.MethodsReturning.scala.code
var x=0 
var sawBaggle:Boolean=false 
var y=0
def haveBaggle():Boolean ={ 
  while(!sawBaggle){
  for(x<-0 to 5){
      forward();
    
      if(isOverBaggle()){
        sawBaggle=true
      }
    }
     for (y<- 0 to 5){
       backward();
     }
    right();
    forward();
    left();
    
  
    return true
}
}
